--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -31,6 +31,26 @@
 .container {
   width: 400px;
   margin: auto;
+
+  ::ng-deep .mat-focused .mat-form-field-label {
+    /*change color of label*/
+    color: white !important;
+  }
+
+  ::ng-deep.mat-form-field-underline {
+    /*change color of underline*/
+    background-color: white !important;
+  }
+
+  ::ng-deep.mat-form-field-ripple {
+    /*change color of underline when focused*/
+    background-color: white !important;
+  }
+
+  ::ng-deep .mat-form-field-label {
+    /*change color of label*/
+    color: white !important;
+  }
 }
 
 .at {
@@ -43,12 +63,13 @@
   font-weight: 800;
 }
 
-.at>span {
+.at > span {
   display: block;
   font-size: 16px;
 }
 
-ng-container {}
+ng-container {
+}
 
 .wrap {
   width: 100%;
@@ -199,10 +220,10 @@ input:-webkit-autofill {
   color: $primary-color;
 }
 
- .reset-password-form{
+.reset-password-form {
   ::ng-deep {
-    .mat-form-field-label{
-      left:0 !important;
+    .mat-form-field-label {
+      left: 0 !important;
     }
   }
 }
