--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,15 @@
   <div class="wrap">
     <div class="container">
       <div class="at">
-        @ <span>{{ configService.config.branding }}</span>
+        <img
+          class="logo"
+          *ngIf="configService.config.logo"
+          [src]="configService.config.logo"
+          alt="@"
+        />
+        <span *ngIf="!configService.config.logo">{{
+          configService.config.branding
+        }}</span>
       </div>
 
       <p id="saml-login" *ngIf="showSamlLogin">
