--- a/src/app/plan-consultation/plan-consultation.component.html
+++ b/src/app/plan-consultation/plan-consultation.component.html
@@ -1,36 +1,60 @@
 <ng-container>
   <div class="wrap">
     <div class="container">
-      <div class="at">@ <span>{{ configService.config.branding }}</span></div>
+      <div class="logo" *ngIf="!configService.config.logo" class="at">
+        <span>{{ configService.config.branding }}</span>
+      </div>
+      <img
+        class="logo"
+        *ngIf="configService.config.logo"
+        [src]="configService.config.logo"
+        alt="@"
+      />
 
-      <form (submit)="handleSubmit()" class="example-form plan-consultation-form" [formGroup]="planConsultationForm">
-        <h4  *ngIf="!success && !error">{{ 'planConsultation.whenWillYouBeAvailable' | translate }}</h4>
+      <form
+        (submit)="handleSubmit()"
+        class="example-form plan-consultation-form"
+        [formGroup]="planConsultationForm"
+      >
+        <h4 *ngIf="!success && !error">
+          {{ "planConsultation.whenWillYouBeAvailable" | translate }}
+        </h4>
         <!-- <p class="center white" *ngIf="!success"><small>{{ 'resetPassword.youAreOnThisPage' | translate }}</small></p> -->
 
         <section *ngIf="success" class="message-container success">
-          <p >
-            {{ 'planConsultation.success' | translate }}
+          <p>
+            {{ "planConsultation.success" | translate }}
             <mat-icon svgIcon="check"></mat-icon>
           </p>
         </section>
 
         <section *ngIf="!success && error" class="message-container error">
-          <mat-error >{{error}}</mat-error>
+          <mat-error>{{ error }}</mat-error>
         </section>
-        <section >
-          <mat-form-field *ngIf="consultation && !error && !success" class="dealy-input">
-            <input matInput placeholder="{{ 'planConsultation.timeInMinutes' | translate }}" formControlName="delay" type="number" />
-             <mat-error>
-              {{ 'planConsultation.maxDelay' | translate }}
+        <section>
+          <mat-form-field
+            *ngIf="consultation && !error && !success"
+            class="dealy-input"
+          >
+            <input
+              matInput
+              placeholder="{{ 'planConsultation.timeInMinutes' | translate }}"
+              formControlName="delay"
+              type="number"
+            />
+            <mat-error>
+              {{ "planConsultation.maxDelay" | translate }}
             </mat-error>
-
           </mat-form-field>
 
-          <button  *ngIf="!error && !loading && !success" class="submit-btn" mat-button type="submit">
-            {{ 'planConsultation.send' | translate }}
+          <button
+            *ngIf="!error && !loading && !success"
+            class="submit-btn"
+            mat-button
+            type="submit"
+          >
+            {{ "planConsultation.send" | translate }}
           </button>
-
-
         </section>
       </form>
 
@@ -47,7 +71,6 @@
             {{ 'resetPassword.anUnknownErrorHasBeenEncountered' | translate }}
           </div>
         </ng-container> -->
-
       </div>
     </div>
   </div>
