--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,17 +3,7 @@
     <app-side-chat class="overlay"></app-side-chat>
 
     <mat-sidenav opened #sidenav mode="side" class="sidenav">
-      <div class="at">
-        <img
-          class="logo"
-          *ngIf="configService.config.logo"
-          [src]="configService.config.logo"
-          alt="@"
-        />
-        <span *ngIf="!configService.config.logo">{{
-          configService.config.branding
-        }}</span>
-      </div>
+      <div class="at">@ <span> {{ 'login.home' | translate }}</span></div>
       <mat-list class="menu-list">
         <mat-list-item class="list-item">
           <button
