--- a/src/app/test-media/test-media.component.scss
+++ b/src/app/test-media/test-media.component.scss
@@ -10,7 +10,8 @@ mat-form-field {
   margin-left: 10%;
   min-height: 300px;
   background: #fff;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 
   .left,
   .right {
@@ -26,14 +27,20 @@ mat-form-field {
     color: #205482;
     font-size: 0.9em;
   }
-
 }
 
 #volume-container {
   height: 12px;
   width: 95%;
   border: 1px solid #eaeaea;
-  background: linear-gradient(90deg, rgba(194,0,0,1) 0%, rgba(252,220,1,1) 25%, rgba(41,218,0,1) 52%, rgba(41,218,0,1) 82%, rgba(252,220,1,1) 94%, rgba(194,0,0,1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(252, 220, 1, 1) 25%,
+    rgba(41, 218, 0, 1) 52%,
+    rgba(41, 218, 0, 1) 82%,
+    rgba(252, 220, 1, 1) 94%,
+    rgba(194, 0, 0, 1) 100%
+  );
 
   #volume-slider {
     height: 100%;
@@ -50,10 +57,10 @@ mat-form-field {
   border: 1px solid #d6d6d6;
   background: #fafafa;
   position: relative;
-    display: flex;
-    z-index: 10;
+  display: flex;
+  z-index: 10;
 }
-.loading{
+.loading {
   margin-top: 20px;
   display: flex;
   align-items: center;
