--- a/src/app/video-room/video-room.component.html
+++ b/src/app/video-room/video-room.component.html
@@ -1,9 +1,9 @@
 <div
   *ngIf="!accepted"
   class="bounds"
-  style="background-image: url('/assets/background.jpg');"
+  style="background-image: url('/assets/background.jpg')"
 >
-  <div style="width: 100%; height: 32%;"></div>
+  <div style="width: 100%; height: 32%"></div>
 
   <mat-icon
     svgIcon="incoming"
@@ -21,7 +21,7 @@
     <strong>{{ "videoRoom.consultation" | translate }} </strong> <br />
     {{ patient.firstName + " " + patient.lastName | uppercase }}
   </h3> -->
-  <div style="width: 170px; margin: auto; margin-top: 40px;">
+  <div style="width: 170px; margin: auto; margin-top: 40px">
     <button (click)="joinToSession()" class="fab accept-btn" mat-button>
       <mat-icon st svgIcon="camera"></mat-icon>
     </button>
@@ -36,18 +36,18 @@
   </div>
 </div>
 
-<div style="width: 100%; height: 100%; position: relative;">
+<div style="width: 100%; height: 100%; position: relative">
   <div
     [ngClass]="{ ringing: !this.remoteUsers.length }"
     id="layout"
     class="bounds"
-    style="height: 100%; display: flex;"
+    style="height: 100%; display: flex"
     (click)="toggleButtons()"
   >
     <ng-container *ngIf="accepted">
       <!-- Main video -->
       <div
-        *ngIf="!audioOnly && !webCamDisabled"
+        *ngIf="camStatus === 'on' && !webCamDisabled"
         #mainStream
         style="
           z-index: 1003;
@@ -60,42 +60,31 @@
         class="OT_root OT_publisher OT_main custom-class"
         id="localUser"
       >
-
-
-      <app-peer-video
-      #streamComponentLocal
-      *ngIf="myCamStream"
-        [stream]="myCamStream"
-  [id]="myCamStream.mediaStream.id"
-
-      ></app-peer-video>
+        <app-peer-video
+          #streamComponentLocal
+          *ngIf="myCamStream"
+          [stream]="myCamStream"
+          [id]="myCamStream.mediaStream.id"
+        ></app-peer-video>
       </div>
-
-
 
       <!-- Remotes -->
       <div
         *ngFor="let user of this.remoteUsers"
-        style="height: 100%; top: 0px; flex: 1;"
+        style="height: 100%; top: 0px; flex: 1"
         class="OT_root OT_publisher OT_remote custom-class OV_big"
         id="remoteUsers"
       >
-      <ng-container *ngFor="let stream of user.streams" >
+        <ng-container *ngFor="let stream of user.streams">
+          <app-peer-video
+            *ngIf="stream.kind === 'video'"
+            [stream]="stream"
+            [id]="stream.mediaStream.id"
+          ></app-peer-video>
 
-        <app-peer-video
-        *ngIf="stream.kind  === 'video'"
-          [stream]="stream"
-          [id]="stream.mediaStream.id"
-        ></app-peer-video>
-
-        <app-peer-audio
-        *ngIf="stream.kind  === 'audio'"
-        [stream]="stream"
-
-        >
-
-        </app-peer-audio>
-      </ng-container>
+          <app-peer-audio *ngIf="stream.kind === 'audio'" [stream]="stream">
+          </app-peer-audio>
+        </ng-container>
       </div>
     </ng-container>
   </div>
@@ -114,8 +103,8 @@
     "
   >
     <button (click)="camStatusChanged()" class="fab accept-btn" mat-button>
-      <mat-icon    *ngIf="camStatus === 'on'" st svgIcon="camera"></mat-icon>
-      <mat-icon    *ngIf="camStatus === 'off'" st svgIcon="cameraOff"></mat-icon>
+      <mat-icon *ngIf="camStatus === 'on'" st svgIcon="camera"></mat-icon>
+      <mat-icon *ngIf="camStatus === 'off'" st svgIcon="cameraOff"></mat-icon>
     </button>
     <button
       (click)="rejectCall()"
