added metadata variable to the front

--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -70,6 +70,12 @@
           }}</span>
           {{ invite.createdAt | date: "d MMM yyyy HH:mm":"fr" }}
         </td>
+        <!-- <td>
+          <span class="tile-header"> 
+            metadata 
+          </span>
+          {{ invite.metadata }}
+        </td> -->
         <td>
           <span class="tile-header">{{
             "invitations.scheduledDate" | translate
