Correct some views field errors

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -179,7 +179,7 @@
           }}
         </div>
       </div>
-      <!-- Here i put des metadata informations  -->
+      <!-- Here i put the metadata informations  -->
 
       <div
         *ngFor="let item of consultation.consultation.metadata | keyvalue"
