--- a/src/app/consultations/consultations.component.html
+++ b/src/app/consultations/consultations.component.html
@@ -128,6 +128,22 @@
           }}
         </td>
 
+          <td 
+            *ngIf="status != 'closed'" 
+            (click)="showChat(consultation._id)"
+            ><span
+            *ngFor="let item of consultation.consultation.metadata | keyvalue;  let i = index;"
+            >
+            <span 
+              class="tile-header">
+              {{ i < 1 ? item.key : ""}}
+            </span>
+            
+
+              {{  i < 1 ? item.value : "" }}
+            </span>
+          </td>
+
         <td
           class="online-status-cell"
           *ngIf="status != 'closed'"
