feat: add OpenId integration

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
       </div>
 
       <p id="saml-login" *ngIf="showSamlLogin">
-        <a [href]="samlLoginUrl" class="redirect-btn" mat-button>
+        <a [href]="openIdLoginUrl" class="redirect-btn" mat-button>
           {{ "login.institutionalConnection" | translate }}
         </a>
       </p>
