css variable fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,7 @@
   margin: 16px;
   font-size: 30px;
   text-align: center;
-  color: $primary-color;
+  color: var(--primary-color);
   font-weight: 500;
 }
 .at > span {
