--- a/src/app/consultation/consultation.component.scss
+++ b/src/app/consultation/consultation.component.scss
@@ -47,7 +47,7 @@
   width: 58%;
   height: 37px;
   margin: auto;
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 .submit-btn mat-icon {
