--- a/src/app/profile-update/profile-update.component.scss
+++ b/src/app/profile-update/profile-update.component.scss
@@ -75,7 +75,7 @@
   // flex-direction: column;
 }
 .btn__send {
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   color: #ffffff;
 }
 .mat-form-field-disabled .label {
