--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,7 +103,7 @@ img {
 }
 
 .owl-dt-control-content.owl-dt-control-button-content {
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 .red-snackbar {
