--- a/src/app/invite-form/invite-form.component.scss
+++ b/src/app/invite-form/invite-form.component.scss
@@ -81,7 +81,7 @@
   // flex-direction: column;
 }
 .btn__send {
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   color: #ffffff;
 }
 
