--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -91,7 +91,7 @@ ng-container {
     border-radius: 60px;
     text-align: center;
     height: 48px;
-    color: $primary-color;
+    color: var(--primary-color);
     padding-top: 5px;
   }
 }
@@ -111,7 +111,7 @@ h4 {
   text-align: center;
   width: 160px;
   height: 48px;
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 input {
@@ -129,7 +129,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px $primary-color inset !important;
+  -webkit-box-shadow: 0 0 0 30px var(--primary-color) inset !important;
 }
 
 input:-webkit-autofill {
@@ -205,7 +205,7 @@ input:-webkit-autofill {
 .success {
   background-color: white;
   padding: 30px;
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 .submit-btn {
@@ -217,7 +217,7 @@ input:-webkit-autofill {
   text-align: center;
   width: 160px;
   height: 48px;
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 .reset-password-form {
