--- a/src/app/top-nav/top-nav.component.scss
+++ b/src/app/top-nav/top-nav.component.scss
@@ -48,7 +48,7 @@
   // display: table;
 
   float: right;
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   color: #ffffff;
   // line-height: 50%;
   display:table-cell;
