--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -66,7 +66,7 @@
           }}</a>
         </div>
 
-        <app-select-language></app-select-language>
+<!--        <app-select-language></app-select-language>-->
       </form>
       <form *ngIf="localLoginToken" (submit)="loginSms()" class="example-form">
         <h4>{{ "login.pleaseFillUpTheRecievedSMS" | translate }}</h4>
